[package]
name = "poe2filter"
version = "0.0.2"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [ "rustls-tls", "json" ] }
tokio = { version = "1.42.0", default-features = false, features = [ "net", "rt", "io-util", "fs", "parking_lot" ] }
serde = { version = "1.0.217", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0.134" }
zip = { version = "2.2.2", default-features = false, features = [ "deflate", "bzip2", "deflate64", "lzma", "zstd" ] }
color-eyre = "0.6.3"
log = "0.4.22"
pretty_env_logger = "0.5.0"
bytes = "1.9.0"
nix = { version = "0.29.0", default-features = false, features = [ "process" ] }

[profile.release]
strip = true
lto = true
codegen-units = 1
